get orgnized and More enhanced README

--- a/01.html-traversy-media/04-tag-attributes/index.html
+++ b/01.html-traversy-media/04-tag-attributes/index.html
@@ -4,8 +4,10 @@
         <title>Tag Attributes</title>
     </head>
     <body>
+        <!-- Tag Attributes -->
         <h1 title="My Company">About Us</h1>
-        
+        <a href="hello.com">Hello</a>
+
         <div style="margin-top: 300px;"></div>
     </body>
 </html>
